[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/RobotoMono-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://roboto36.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/GUI.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.478431, 0.2, 0.2, 1 )
border_width_left = 1
border_width_top = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.364706, 0.356863, 0.356863, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=4]
size = 36
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Rows" type="VBoxContainer" parent="MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 984.0
margin_bottom = 560.0
mouse_filter = 2

[node name="Top Row" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_right = 944.0
margin_bottom = 85.0
mouse_filter = 2
size_flags_vertical = 3

[node name="Middle Row" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_top = 89.0
margin_right = 944.0
margin_bottom = 430.0
mouse_filter = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="Bottom Row" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_top = 434.0
margin_right = 944.0
margin_bottom = 520.0
mouse_filter = 2
size_flags_vertical = 3

[node name="HealthContainer" type="CenterContainer" parent="MarginContainer/Rows/Bottom Row"]
margin_right = 200.0
margin_bottom = 86.0
mouse_filter = 2

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/Rows/Bottom Row/HealthContainer"]
margin_top = 28.0
margin_right = 200.0
margin_bottom = 58.0
rect_min_size = Vector2( 200, 30 )
mouse_filter = 2
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 65.0

[node name="Ammo" type="HBoxContainer" parent="MarginContainer/Rows/Bottom Row"]
margin_left = 204.0
margin_right = 944.0
margin_bottom = 86.0
mouse_filter = 2
size_flags_horizontal = 3
alignment = 2

[node name="CurrentAmmo" type="Label" parent="MarginContainer/Rows/Bottom Row/Ammo"]
margin_left = 622.0
margin_top = 19.0
margin_right = 666.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 2 )
text = "30"

[node name="AmmoSeparator" type="Label" parent="MarginContainer/Rows/Bottom Row/Ammo"]
margin_left = 670.0
margin_top = 19.0
margin_right = 692.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 2 )
text = "/"

[node name="MaxAmmo" type="Label" parent="MarginContainer/Rows/Bottom Row/Ammo"]
margin_left = 696.0
margin_top = 19.0
margin_right = 740.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 4 )
text = "30"
